Selection-autoscroll should be triggered when the pointer is in the border belt.

Previously, selection-autoscroll can only be triggered when the pointer is
outside the border. This generally works fine. However, when the browser is
maximized and there is no panel or dock at the bottom of user's desktop, the
pointer can't move out the border as it can't move out the screen, so
selection-autoscroll can't be triggered.

This patch implements the selection-autoscroll according to drag-and-drop
autoscroll, so that the autoscroll will be triggered when the pointer is in
the border belt area (within a certain distance to the border and inside).

BUG=645108

Review-Url: https://codereview.chromium.org/2355643002
Cr-Commit-Position: refs/heads/master@{#419654}

Former-commit-id: b7026e2d381d6f3f8d46394bf173b92c2826a5d5